--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "bootstrap": "^5.3.3",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
+    "openai": "^4.56.1",
     "prisma": "^5.13.0",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
