--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.637.0",
     "@prisma/client": "^5.13.0",
     "bootstrap": "^5.3.3",
-    "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
     "openai": "^4.56.1",
     "prisma": "^5.13.0",
